--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .nav {
-    background-color: red;
+
     width: 100vw;
     height: 15vh;
     display: flex;
@@ -12,15 +12,31 @@
 }
 
 .nav .navList {
-    background-color: blue;
     list-style: none;
     display: flex;
-    margin-left: 50vw;
+    margin-left: 40vw;
     gap: 5vw;
 }
 
 .nav li {
     font-size: 20px;
     font-family: 'DM Sans', sans-serif;
+    height: 5vh;
     color: 666666;
+}
+
+.list-icons {
+
+    height: 5vh;
+    width: 6vw;
+    margin-left: 5vw;
+}
+
+.list-icons img {
+    width: 2vw;
+    color: 666666;
+}
+
+.list-icons .icon-linkedin {
+    margin-left: 1vw;
 }
