--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 * {
     padding: 0;
     margin: 0;
 }
 
 .nav {
-
     width: 100vw;
-    height: 15vh;
+    height: 20vh;
     display: flex;
     align-items: center;
 }
@@ -14,29 +16,76 @@
 .nav .navList {
     list-style: none;
     display: flex;
-    margin-left: 40vw;
-    gap: 5vw;
+    margin-left: 50vw;
+    gap: 4vw;
 }
 
 .nav li {
-    font-size: 20px;
+    font-size: 18px;
     font-family: 'DM Sans', sans-serif;
     height: 5vh;
-    color: 666666;
+    color: #666666;
 }
 
 .list-icons {
-
+    margin-top: 0.2vw;
     height: 5vh;
     width: 6vw;
-    margin-left: 5vw;
+    margin-left: 4vw;
 }
 
 .list-icons img {
     width: 2vw;
-    color: 666666;
+    color: #666666;
 }
 
 .list-icons .icon-linkedin {
     margin-left: 1vw;
+}
+
+.body-home {
+    display: flex;
+    flex-direction: column;
+    height: 40vh;
+    width: 80vw;
+    margin-top: 10vh;
+    margin-left: 10vw;
+    justify-content: center;
+}
+
+.body-home h1 {
+    font-size: 38px;
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(45deg, #13B0F5, #E70FAA);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.body-home h3 {
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+    color: #42446E;
+}
+
+.circle {
+    margin-left: 70vw;
+    margin-top: -40vh;
+    width: 20vw;
+    height: 40vh;
+    border-radius: 50%;
+    background-image: url('assents/img-matheus.jpg');
+    background-size: 20vw;
+    position: relative;
+}
+
+.circle::before {
+    content: '';
+    position: absolute;
+    top: -5px; /* Ajuste para a espessura da borda */
+    left: -5px; /* Ajuste para a espessura da borda */
+    width: calc(100% + 10px); /* Ajuste para a espessura da borda */
+    height: calc(100% + 10px); /* Ajuste para a espessura da borda */
+    border-radius: 50%;
+    background: linear-gradient(45deg, #E70FAA, #00C0FD);
+    z-index: -1;
 }
