--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     height: 20vh;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .nav .navList {
@@ -18,6 +19,7 @@
     display: flex;
     margin-left: 50vw;
     gap: 4vw;
+    position: relative; 
 }
 
 .nav li {
@@ -25,6 +27,28 @@
     font-family: 'DM Sans', sans-serif;
     height: 5vh;
     color: #666666;
+    position: relative;
+}
+
+.nav li:hover {
+    color: #000000;
+}
+
+.nav li::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0; 
+    width: 100%;
+    height: 2px;
+    background: #000000;
+    transform: scaleX(0);
+    transform-origin: bottom right; 
+    transition: transform 0.3s ease; 
+}
+
+.nav li:hover::after {
+    transform: scaleX(1); 
 }
 
 .list-icons {
@@ -32,6 +56,14 @@
     height: 5vh;
     width: 6vw;
     margin-left: 4vw;
+}
+
+.icon-github:hover {
+    filter: grayscale(100%) brightness(0) invert(0)
+}
+
+.icon-linkedin:hover {
+    filter: grayscale(100%) brightness(0) invert(0)
 }
 
 .list-icons img {
@@ -74,8 +106,9 @@
     height: 40vh;
     border-radius: 50%;
     background-image: url('assents/img-matheus.jpg');
-    background-size: 20vw;
+    background-size: cover;
     position: relative;
+    box-shadow: 0 4px 8px rgba(0,0,0,1)
 }
 
 .circle::before {
