--- a/style.css
+++ b/style.css
@@ -6,20 +6,28 @@
     margin: 0;
 }
 
+.section-1 {
+    height: 70vh;
+}
+
 .nav {
     width: 100vw;
-    height: 20vh;
+    height: 15vh;
     display: flex;
     align-items: center;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: #FFFFFF;
 }
+
 
 .nav .navList {
     list-style: none;
     display: flex;
     margin-left: 50vw;
     gap: 4vw;
-    position: relative; 
 }
 
 .nav li {
@@ -27,28 +35,31 @@
     font-family: 'DM Sans', sans-serif;
     height: 5vh;
     color: #666666;
-    position: relative;
+    position: relative; /* Necessário para o pseudo-elemento ::after */
+    transition: color 0.3s ease, transform 0.3s ease;
 }
 
 .nav li:hover {
     color: #000000;
+    transform: scale(1.1);
 }
 
 .nav li::after {
     content: '';
     position: absolute;
+    bottom: 0;
     left: 0;
-    bottom: 0; 
     width: 100%;
-    height: 2px;
+    height: 2px; /* Espessura da linha debaixo */
     background: #000000;
     transform: scaleX(0);
-    transform-origin: bottom right; 
-    transition: transform 0.3s ease; 
+    transform-origin: bottom right;
+    transition: transform 0.3s ease; /* Animação para o efeito da linha */
 }
 
 .nav li:hover::after {
-    transform: scaleX(1); 
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 .list-icons {
@@ -80,7 +91,7 @@
     flex-direction: column;
     height: 40vh;
     width: 80vw;
-    margin-top: 10vh;
+    margin-top: 30vh;
     margin-left: 10vw;
     justify-content: center;
 }
@@ -114,11 +125,102 @@
 .circle::before {
     content: '';
     position: absolute;
-    top: -5px; /* Ajuste para a espessura da borda */
-    left: -5px; /* Ajuste para a espessura da borda */
-    width: calc(100% + 10px); /* Ajuste para a espessura da borda */
-    height: calc(100% + 10px); /* Ajuste para a espessura da borda */
+    top: -5px; 
+    left: -5px; 
+    width: calc(100% + 10px); 
+    height: calc(100% + 10px); 
     border-radius: 50%;
     background: linear-gradient(45deg, #E70FAA, #00C0FD);
     z-index: -1;
 }
+
+.hr {
+    margin-left: 10vw;
+    width: 80vw;
+    height: 0.1vh;
+    background-color: #666666;
+}
+
+.section-2 {
+    height: 90vh;
+}
+
+.body-section-2 {
+    display: flex;
+    flex-direction: column;
+    height: 40vh;
+    width: 50vw;
+    margin-left: 10vw;
+    justify-content: center;
+}
+
+.body-section-2 h1 {
+    font-size: 38px;
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(45deg, #13B0F5, #E70FAA);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.body-section-2 p {
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+    color: #42446E;
+}
+
+.body-tecnologias {
+    height: 40vh;
+    width: 80vw;
+    margin-top: 4vh;
+    margin-left: 10vw;
+}
+
+.body-tecnologias h1 {
+    font-size: 38px;
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(45deg, #13B0F5, #E70FAA);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.body-tecnologias p {
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+    color: #42446E;
+}
+.tecnologias {
+    margin-top: 6vh;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.tecnologias img {
+    width: 5vw;
+}
+
+.section-3 {
+    height: 90vh;
+}
+
+.body-section-3 {
+    display: flex;
+    flex-direction: column;
+    height: 40vh;
+    width: 50vw;
+    margin-left: 10vw;
+    justify-content: center;
+}
+
+.body-section-3 h1 {
+    font-size: 38px;
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(45deg, #13B0F5, #E70FAA);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.body-skills {
+    
+}
+
