--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     overflow-x: hidden; 
 }
@@ -126,10 +130,14 @@ body {
     width: 20vw;
     height: 40vh;
     border-radius: 50%;
-    background-image: url('assents/img-matheus.jpg');
-    background-size: cover;
     position: relative;
-    box-shadow: 0 4px 8px rgba(0,0,0,1)
+    box-shadow: 0 4px 8px rgba(0,0,0,1);
+}
+
+.circle img {
+    width: 20vw;
+    height: 40vh;
+    border-radius: 50%;
 }
 
 .circle::before {
@@ -153,7 +161,7 @@ body {
 
 .section-2 {
     height: 90vh;
-    width: 100vw;
+    width: 100vw; 
 }
 
 .body-section-2 {
@@ -340,9 +348,14 @@ body {
     width: 20vw;
     height: 52vh;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
+.card:hover {
+    transform: scale(1.1);
+}
 .card h1 {
     font-size: 24px;
     font-family: "Poppins", sans-serif;
@@ -372,7 +385,7 @@ body {
     align-items: center;
 }
 
-.card-button {
+.card-button-eye{
     height: 6vh;
     width: 7vw;
     border: none;
@@ -383,6 +396,33 @@ body {
     justify-content: center;
     align-items: center;
     justify-content: space-around;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card-button-github {
+    height: 6vh;
+    width: 7vw;
+    border: none;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card-button-github:hover {
+    background-color: #1d0af7; 
+    transform: scale(1.1); 
+}
+
+.card-button-eye:hover {
+    background-color: #732571; 
+    transform: scale(1.1); 
 }
 
 #eye_img {
@@ -396,5 +436,13 @@ body {
 }
 
 
-
-
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
